# cockroach-operator

./: .bazelrc  .dockerignore  .gitignore  .golangci.yaml  .osdk-scorecard.yaml.tpl  BUILD.bazel  CHANGELOG.md  DEVELOPER.md  Devopenshift.md  Docker.code-gen  Docker.test-runner  Dockerfile.code-gen  Dockerfile.test-runner  Dockerfile.ubi  Dockerfile.utils  LICENSE  Makefile  OpenshiftDev.md  OpenshiftDev_Draft.md  OpenshiftGCP.md  PROJECT  README.md  WORKSPACE  bundle.Dockerfile  crdb-versions.txt  crdb-versions.yaml  custom-bundle.Dockerfile  go.mod  go.sum  index.Dockerfile  index.Dockerfile389314389  k8s-operator-readme.md  main.go  openshift.md  openshift_automation_drafts.txt  test-registry.yaml  test.sh  version.txt
api/v1alpha1/: BUILD.bazel  action_types.go  cluster_defaults.go  cluster_defaults_test.go  cluster_types.go  cluster_types_test.go  condition_types.go  groupversion_info.go  pod_container_types.go  suite_test.go  volume.go  volume_test.go  volume_types.go  zone.go  zone_test.go  zone_types.go  zz_generated.deepcopy.go
apis/v1alpha1/: BUILD.bazel  action_status.go  action_types.go  cluster_defaults.go  cluster_defaults_test.go  cluster_types.go  cluster_types_test.go  condition_types.go  crdbcluster_conversion.go  doc.go  groupversion_info.go  restart_types.go  suite_test.go  volume.go  volume_test.go  webhook.go  webhook_test.go  zz_generated.deepcopy.go
apis/v1beta1/: BUILD.bazel  action_status.go  action_types.go  crdbcluster_conditions.go  crdbcluster_conversion.go  crdbcluster_types.go  crdbnode_types.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/cockroach-operator/: BUILD.bazel  main.go  prep_webhooks.go
config/: BUILD.bazel
config/crd/: BUILD.bazel  kustomization.yaml  kustomizeconfig.yaml
config/default/: BUILD.bazel  apply_k8s.sh  kustomization.yaml  namespace.yaml
config/examples/: 3-nodes-insecure-no-topology.yaml  3-nodes-insecure.yaml  3-nodes-secure-kube-cert-v20.1.yaml  3-nodes-secure-kube-cert.yaml  example.yaml
config/manager/: deployment.yaml  kustomization.yaml
config/manifests/: BUILD.bazel  kustomization.yaml
config/operator/: BUILD.bazel  kustomization.yaml
config/rbac/: database.yaml  kustomization.yaml  operator.yaml  role.yaml  role_binding.yaml
config/samples/: BUILD.bazel  crdb-tls-example.yaml  crdb-tls-example.yaml.in  kustomization.yaml
config/scorecard/: kustomization.yaml
config/templates/: client-secure-operator.yaml.in  crdb-tls-example.yaml.in  csv.yaml.in  deployment_image.yaml.in  deployment_patch.yaml.in  example.yaml.in  operator.yaml.in  smoketest.yaml.in
config/user_permissions/: BUILD.bazel  kustomization.yaml  user_permission_role.yaml
config/webhook/: BUILD.bazel  kustomization.yaml  kustomizeconfig.yaml  manifests.yaml  service.yaml
deploy/: BUILD.bazel  kustomization.yaml  operator.yaml  role.yaml
deploy/certified-metadata-bundle/: bundle.Dockerfile
deploy/crds/: crdb.cockroachlabs.com_crdbclusters.yaml
e2e/: BUILD.bazel  assert.go  create_test.go  e2e.go  e2e_test.go
e2e/create/: BUILD.bazel  create_test.go
e2e/decomission/: BUILD.bazel  decomission_test.go
e2e/decommission/: BUILD.bazel  decommission_test.go
e2e/kubetest2-eks/: BUILD.bazel  main.go
e2e/kubetest2-k3d/: BUILD.bazel  README.md  main.go
e2e/kubetest2-openshift/: BUILD.bazel  README.md  main.go
e2e/multiplenamespaces/: BUILD.bazel  multiple_namespaces_test.go
e2e/openshift/: BUILD.bazel  openshift_packaging_test.go
e2e/pvcresize/: BUILD.bazel  pvcresize_test.go
e2e/upgrades/: BUILD.bazel  upgrades_test.go
e2e/upgradessha256/: BUILD.bazel  upgradessha256_test.go
e2e/versionchecker/: BUILD.bazel  versionchecker_test.go
hack/: .packages  BUILD.bazel  apply-crdb-example.sh  apply-operator.sh  bazel-test.sh  boilerplaterize  bundle-csv.sh  bundle.sh  check_trailing_whitespace.sh  cleanup-packaging.sh  common.sh  create-crdb-example.sh  create-gke-cluster.sh  delete-crdb-example.sh  delete-gke-cluster.sh  delete-operator.sh  deploy-operator.sh  dev-deploy-crdb.sh  dev.sh  eks-storageclass.yaml  functions.sh  gcr-in-kind.sh  golangci-lint.sh  install-bazel.sh  install-redhat-tools.sh  main_test.py  make.sh  openshift-gcp-create.sh  openshift-iam-delete.sh  openshift-test-packaging.sh  opm-build-bundle.sh  opm-build-index.sh  push-openshift-images.sh  push-operator-gcr.sh  redhat.sh  requirements.txt  start_kind.go  start_stop_kind.go  update-bazel.sh  update-codegen.sh  (+22 more)
hack/boilerplate/: BUILD.bazel  boilerplate.Dockerfile.txt  boilerplate.Makefile.txt  boilerplate.css.txt  boilerplate.deepcopy.go.preamble  boilerplate.deepcopy.go.txt  boilerplate.go.preamble  boilerplate.go.txt  boilerplate.html.txt  boilerplate.java.txt  boilerplate.scss.txt  boilerplate.sh.txt  boilerplate.tf.txt  boilerplate.ts.txt  boilerplate.xml.txt  boilerplate.yaml.txt
hack/crdbversions/: BUILD.bazel  main.go  main_test.go
hack/gke/: BUILD.bazel  start_stop_gke.go
hack/k8s/: BUILD.bazel  cluster_checker.go  verify_k8s_running.go
hack/lib/: __init__.py
hack/release/: BUILD.bazel  main.go  steps.go  steps_test.go
hack/run/: BUILD.bazel  run.go
hack/smoketest/: BUILD.bazel  main.go  steps.go  steps_test.go
hack/update_crdb_versions/: BUILD.bazel  main.go  main_test.go
hack/versionbump/: BUILD.bazel  main.go
manifests/: BUILD.bazel  client-secure-byoc.yaml  client-secure.yaml  kustomization.yaml  opconfig.yaml  operator.yaml  operator.yaml.in  substitute.sh
manifests/patches/: deployment_patch.yaml  deployment_patch.yaml.in  related_image_coackroach.yaml  sa_patch.yaml
pkg/actor/: BUILD.bazel  action.go  actor.go  actor_test.go  cluster_restart.go  cluster_restart_test.go  context.go  decommission.go  decommission_test.go  deploy.go  deploy_test.go  director.go  director_test.go  export_test.go  expose_ingress.go  expose_ingress_test.go  generate_cert.go  initialize.go  partitioned_update.go  partitioned_update_test.go  rbac.go  request_cert.go  resize_pvc.go  scale_status.go  setup_rbac.go  setup_rbac_test.go  topology_planner.go  topology_planner_test.go  upgrade.go  validate_version.go
(+467 files in other folders)
