# gazelle:prefix github.com/cockroachdb/cockroach-operator
# gazelle:proto disable_global
# gazelle:exclude docs/generated/reference/generate/json_swagger

load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")

# TODO
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_oci//oci:defs.bzl", "oci_push")

# export WORKSPACE so workspace_binary rules can be used outside the root
exports_files([
    "WORKSPACE",
    "LICENSE",
    "go.mod",
    "go.sum",
])

gazelle(name = "gazelle")

expand_template(
    name = "tags",
    stamp_substitutions = {
        "APP_VERSION": "{{STABLE_DOCKER_TAG}}",
    },
    template = ["APP_VERSION"],
)

oci_push(
    name = "push_operator_image",
    image = "//cmd/cockroach-operator:index",
    remote_tags = ":tags",
    repository = "${DOCKER_REGISTRY}/${DOCKER_IMAGE_REPOSITORY}",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "license",
    srcs = ["LICENSE"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//apis/v1alpha1:all-srcs",
        "//apis/v1beta1:all-srcs",
        "//cmd/cockroach-operator:all-srcs",
        "//config:all-srcs",
        "//e2e:all-srcs",
        "//examples:all-srcs",
        "//hack:all-srcs",
        "//pkg/actor:all-srcs",
        "//pkg/client/clientset/versioned:all-srcs",
        "//pkg/client/informers/externalversions:all-srcs",
        "//pkg/client/listers/apis/v1alpha1:all-srcs",
        "//pkg/clustersql:all-srcs",
        "//pkg/clusterstatus:all-srcs",
        "//pkg/condition:all-srcs",
        "//pkg/controller:all-srcs",
        "//pkg/database:all-srcs",
        "//pkg/featuregates:all-srcs",
        "//pkg/features:all-srcs",
        "//pkg/healthchecker:all-srcs",
        "//pkg/kube:all-srcs",
        "//pkg/kuberecord:all-srcs",
        "//pkg/labels:all-srcs",
        "//pkg/ptr:all-srcs",
        "//pkg/resource:all-srcs",
        "//pkg/scale:all-srcs",
        "//pkg/security:all-srcs",
        "//pkg/testutil:all-srcs",
        "//pkg/update:all-srcs",
        "//pkg/util:all-srcs",
        "//pkg/utilfeature:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
