# Copyright 2020 The Cockroach Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//config/crd:all-srcs",
        "//config/default:all-srcs",
        "//config/manager:all-srcs",
        "//config/manifests:all-srcs",
        "//config/operator:all-srcs",
        "//config/rbac:all-srcs",
        "//config/samples:all-srcs",
        "//config/scorecard:all-srcs",
        "//config/webhook:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
