load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
    name = "operator",
    images = {
        "cockroach-operator:placeholder": "//cmd/cockroach-operator:operator_image",
    },
    template = ":operator.yaml",
)

k8s_deploy(
    name = "role",
    template = ":role.yaml",
    visibility = ["//visibility:public"],
)

k8s_objects(
    name = "install_operator",
    objects = [
        "//config/crd/bases:crd",
        ":operator",
	":role",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
