# gazelle:exclude verify_boilerplate_test.go

load("@io_bazel_rules_go//go:def.bzl", "go_test")

package(default_visibility = ["//visibility:public"])

GAZELLE = "@bazel_gazelle//cmd/gazelle"

KAZEL = "@io_k8s_repo_infra//cmd/kazel"

GO = "@go_sdk//:bin/go"

GOROOT = "@go_sdk//:files"

GOFMT = "@go_sdk//:bin/gofmt"

JQ = "//hack/bin:jq"

FAQ = "//hack/bin:faq"

OPERATORSDK = "//hack/bin:operator-sdk"

KUSTOMIZE = "//hack/bin:kustomize"

OPM = "//hack/bin:opm"

CONTROLLER_GEN = "@io_k8s_sigs_controller_tools//cmd/controller-gen"

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location %s)" % JQ,
        "$(location :update-bazel)",
        # "$(location :update-deps-licenses)",
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        JQ,
        ":update-bazel",
        # ":update-deps-licenses",
    ],
)

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        GAZELLE,
        KAZEL,
    ],
)

sh_binary(
    name = "update-codegen",
    srcs = ["update-codegen.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location @io_k8s_code_generator//cmd/client-gen)",
        "$(location @io_k8s_code_generator//cmd/deepcopy-gen)",
        "$(location @io_k8s_code_generator//cmd/informer-gen)",
        "$(location @io_k8s_code_generator//cmd/lister-gen)",
        "$(location @io_k8s_code_generator//cmd/defaulter-gen)",
        "$(location @io_k8s_code_generator//cmd/conversion-gen)",
        "$(location :update-bazel)",
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        ":update-bazel",
        GO,
        GOROOT,
        GAZELLE,
        KAZEL,
        "@io_k8s_code_generator//cmd/client-gen",
        "@io_k8s_code_generator//cmd/conversion-gen",
        "@io_k8s_code_generator//cmd/deepcopy-gen",
        "@io_k8s_code_generator//cmd/defaulter-gen",
        "@io_k8s_code_generator//cmd/informer-gen",
        "@io_k8s_code_generator//cmd/lister-gen",
    ],
)

sh_test(
    name = "verify-codegen",
    srcs = ["verify-codegen.sh"],
    args = [
        "$(location :update-codegen)",
        "$(location %s)" % GO,
        "$(location @io_k8s_code_generator//cmd/client-gen)",
        "$(location @io_k8s_code_generator//cmd/deepcopy-gen)",
        "$(location @io_k8s_code_generator//cmd/informer-gen)",
        "$(location @io_k8s_code_generator//cmd/lister-gen)",
        "$(location @io_k8s_code_generator//cmd/defaulter-gen)",
        "$(location @io_k8s_code_generator//cmd/conversion-gen)",
        "$(location :update-bazel)",
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        ":update-bazel",
        ":update-codegen",
        GO,
        GOROOT,
        GAZELLE,
        KAZEL,
        "@//:all-srcs",
        "@io_k8s_code_generator//cmd/client-gen",
        "@io_k8s_code_generator//cmd/conversion-gen",
        "@io_k8s_code_generator//cmd/deepcopy-gen",
        "@io_k8s_code_generator//cmd/defaulter-gen",
        "@io_k8s_code_generator//cmd/informer-gen",
        "@io_k8s_code_generator//cmd/lister-gen",
    ],
)

sh_binary(
    name = "update-crds",
    srcs = ["update-crds.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % CONTROLLER_GEN,
    ],
    data = [
        GO,
        CONTROLLER_GEN,
    ],
)

sh_test(
    name = "verify-crds",
    srcs = ["verify-crds.sh"],
    args = [
        "$(location :update-crds)",
        "$(location %s)" % GO,
        "$(location %s)" % CONTROLLER_GEN,
    ],
    data = [
        ":update-crds",
        GO,
        CONTROLLER_GEN,
        "@//:all-srcs",
    ],
)

# Gofmt rules

sh_binary(
    name = "update-gofmt",
    srcs = ["update-gofmt.sh"],
    args = [
        "$(location %s)" % GOFMT,
    ],
    data = [
        GOFMT,
    ],
)

sh_test(
    name = "verify-gofmt",
    srcs = ["verify-gofmt.sh"],
    args = [
        "$(location %s)" % GOFMT,
    ],
    data = [
        GOFMT,
        "@//:all-srcs",
    ],
)

# update-csv generates bundle format for DEV only
sh_binary(
    name = "update-csv",
    srcs = ["update-csv.sh"],
    args = [
        "$(location %s)" % OPERATORSDK,
        "$(location %s)" % KUSTOMIZE,
        "$(location %s)" % OPM,
        "$(location %s)" % FAQ,
    ],
    data = [
        OPERATORSDK,
        KUSTOMIZE,
        OPM,
        FAQ,
        "@//:all-srcs",
    ],
)

# update-pkg-manifest script generates manifests and metadata for OpenShift certification release
# in the package manifests format
sh_binary(
    name = "update-pkg-manifest",
    srcs = ["update-pkg-manifest.sh"],
    args = [
        "$(location %s)" % OPERATORSDK,
        "$(location %s)" % KUSTOMIZE,
        "$(location %s)" % OPM,
        "$(location %s)" % FAQ,
    ],
    data = [
        OPERATORSDK,
        KUSTOMIZE,
        OPM,
        FAQ,
        "@//:all-srcs",
    ],
)

# opm-build-index is used on DEV only-> quay.io registry to add a new version iof the operator in the catalogsource
sh_binary(
    name = "opm-build-index",
    srcs = ["opm-build-index.sh"],
    args = [
        "$(location %s)" % OPM,
    ],
    data = [
        OPM,
        "@//:all-srcs",
    ],
)

# opm-build-bundle is used in the certification release for OpenShift to create the bundle.Dockerfile and validate the packagemanifest format
sh_binary(
    name = "opm-build-bundle",
    srcs = ["opm-build-bundle.sh"],
    args = [
        "$(location %s)" % OPM,
    ],
    data = [
        OPM,
        "@//:all-srcs",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//hack/bin:all-srcs",
        "//hack/boilerplate:all-srcs",
        "//hack/build:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "verify-boilerplates",
    srcs = ["verify_boilerplate_test.go"],
    data = [
        "@//:all-srcs",
    ],
    deps = ["//pkg/testutil:go_default_library"],
)
